--- a/index.html
+++ b/index.html
@@ -132,34 +132,57 @@
         </div>
        </div>
     </div>
-    
+    <div class="subcribe-section">
+      <div class="subcribe">
+        <h1>Get early access today</h1>
+        <p> It only takes a minute to sign up and our free starter tier is extremely generous. If you have any 
+          questions, our support team would be happy to help you</p>
+          <span>
+            <input type="text" placeholder="email@example.com">
+            <button>Get Started For Free</button>
+          </span>
+      </div>
+    </div>
+   
+    <div class="fotter">
+      <div class="fotter1">
+        <img src="/images/logo.svg" alt="">
+        <div>
+          <img src="/images/icon-location.svg" alt="">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
+            dolore magna aliqua</p>
+        </div>
+      </div>
+      <div class="fotter2">
+        <div>
+          <img src="/images/icon-phone.svg" alt="">
+          <p>+1-543-123-4567</p>
+        </div>
+        <div>
+          <img src="/images/icon-email.svg" alt="">
+          <p>example@fylo.com</p>
+        </div>
+      </div>
+
+      <div class="fotter3">
+        <ul>
+          <li><a href="">About Us</a></li>
+          <li><a href="">Jobs</a></li>
+          <li><a href="">Press</a></li>
+          <li><a href="">Blog</a></li>
+        </ul>
+
+        <ul>
+          <li><a href="">Contact Us</a></li>
+          <li><a href="">Terms</a></li>
+          <li><a href="">Privacy</a></li>
+        </ul>
+      </div>
+    </div>
   </div>
 
+      <div class="fotter4">
 
-
-  <!-- 
-
-  Get early access today
-
-  It only takes a minute to sign up and our free starter tier is extremely generous. If you have any 
-  questions, our support team would be happy to help you.
-
-  Get Started For Free
-
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
-  dolore magna aliqua
-
-  +1-543-123-4567
-  example@fylo.com
-
-  About Us
-  Jobs
-  Press
-  Blog
-
-  Contact Us
-  Terms
-  Privacy -->
-
+      </div>
 </body>
 </html>
